add mcp support in nacos server